change the updates of navbar

--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -883,62 +883,91 @@ footer {
  
       <!-- Projects Dropdown -->
       <div class="dropdown">
-        <a href="#">Projects <i class="fa-solid fa-chevron-down"></i></a>
+        <a href="#">Programming Language <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content">
-          <a href="#" style="background-color: black; color: white;">Projects</a>
+          <a href="#" style="background-color: black; color: white;">Programming Language</a>
           <!-- Project links with nested dropdowns -->
           <div class="project">
-            <a href="#">Bionic Hand <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-            </div>
+            <a href="#">C<strong>></strong></a>
           </div>
           <div class="project">
-            <a href="#">SCARA Robot <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-            </div>
+            <a href="#">C++ <strong>></strong></a>
           </div>
           <div class="project">
-            <a href="#">Dobot <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-            </div>
+            <a href="#">Arduino (C/C++)<strong>></strong></a>
           </div>
           <div class="project">
             <a href="#">Aster Robot <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-            </div>
           </div>
           <div class="project">
-            <a href="#">Line Following Robot <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-            </div>
-          </div>
-          <div class="project">
-            <a href="#">Voice Controlled Robot <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-            </div>
-          </div>
-          <div class="project">
-            <a href="#">Self-Balancing Robot <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-            </div>
+            <a href="#">Python <strong>></strong></a>
           </div>
         </div>
       </div>
+
+
+      <!-- Products Dropdown -->
+      <div class="dropdown">
+        <a href="#">microcontrollers <i class="fa-solid fa-chevron-down"></i></a>
+        <div class="dropdown-content">
+          <a href="#" style="background-color: black; color: white;">microcontrollers</a>
+          <div class="product">
+            <a href="#">Arduino <strong>></strong></a>
+            <div class="nested-dropdown">
+              <a href="#">Arduino Uno</a>
+              <a href="#">Arduino Nano</a>
+              <a href="#">Arduino Mega 2560 </a>
+              <a href="#">Arduino Micro</a>
+            </div>
+          </div>
+          <div class="product">
+            <a href="#">ESP32<strong>></strong></a>
+            <div class="nested-dropdown">
+              <a href="#">ESP32-WROOM-32</a>
+              <a href="#">ESP32-C3</a>
+              <a href="#">ESP32-S3</a>
+              <a href="#">ESP32-CAM</a>
+            </div>
+          </div>
+          <div class="product">
+            <a href="#">Raspberry PI <strong>></strong></a>
+            <div class="nested-dropdown">
+              <a href="#">Raspberry Pi 4 Model B</a>
+              <a href="#">Raspberry Pi 3 Model B+</a>
+              <a href="#">Raspberry Pi 2 Model B</a>
+            </div>
+          </div>  
+        </div>
+
+      </div>
+       <!-- Products Dropdown -->
+       <div class="dropdown">
+        <a href="#">Estimated Completion Time <i class="fa-solid fa-chevron-down"></i></a>
+        <div class="dropdown-content">
+          <a href="#" style="background-color: black; color: white;">Estimated Completion Time</a>
+          <div class="product">
+            <a href="#">1 Hour <strong>></strong></a>
+          </div>
+
+          <div class="product">
+            <a href="#">1-3 Hours <strong>></strong></a>
+          </div>
+
+          <div class="product">
+            <a href="#">3-6 Hours <strong>></strong></a>
+          </div>
+
+          <div class="product">
+            <a href="#">Multi-Day <strong>></strong></a>
+          </div>
+        </div>
+       </div>
+
+
+
     </div>
+
+    
   </header>
 
   <!-- JavaScript for toggling dark mode -->
@@ -1020,7 +1049,7 @@ footer {
       <div class="footer-social">
         <h4>Follow Us</h4>
         <a href="https://www.linkedin.com/company/phn-technology" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/phn_technology/ target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/phn_technology/ target="_blank><i class="fab fa-instagram"></i></a>
         <a href="https://www.facebook.com/phntechnology" target="_blank"><i class="fab fa-facebook"></i></a>
         <!-- <a href="https://www.threads.net/@phntechnology" target="_blank"><i class="fab fa-threads"></i></a> -->
         <a href="https://www.youtube.com/channel/UCCoKsPs0lsyr383TIZOoRUg" target="_blank"><i class="fab fa-youtube"></i></a>
