added more featured products

--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -232,7 +232,30 @@
         </a>
         <h3>Asterbot</h3>
     </div>
+    <div class="product-card">
+        <a href="/DogHead">
+            <img src="{% static 'images/product5.png' %}" alt="Dog Head">
+        </a>
+        <h3>DogHead</h3>
+    </div>
+    <div class="product-card">
+        <a href="/Obstacle_Avoidance_Car">
+            <img src="{% static 'images/product6.png' %}" alt="Dog Head">
+        </a>
+        <h3>Obstacle Avoidance Car</h3>
+    </div>
+    <div class="product-card">
+        <a href="/RealtimeClock">
+            <img src="{% static 'images/product7.png' %}" alt="Dog Head">
+        </a>
+        <h3>Real time Clock</h3>
+    </div>
+    <div class="product-card">
+        <a href="/HumanoidRobot">
+            <img src="{% static 'images/product8.png' %}" alt="Dog Head">
+        </a>
+        <h3>Humanoid Robot</h3>
+    </div>
 </div>
-
 </section>
 {% endblock %}
