--- a/Eapp/templates/bionic_hand.html
+++ b/Eapp/templates/bionic_hand.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
  
-{% block title %}Otto's Page{% endblock %}
+{% block title %}Bionic Hand Page{% endblock %}
  
 {% block content %}
  
