changes as per requirement

--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -787,21 +787,20 @@ footer {
   background-color: #222;
 }
 
-<<<<<<< HEAD
 
 /*register page*/
 
 /* ✅ Centering container */
 /* ✅ General Page Styles */
-.container {
+.register-container {
     display: flex;
-    max-width: 900px;
+    max-width: 1500px;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 30px;
     gap: 20px;
-    margin-left: 110px;
+    margin-left: 200px;
 }
 
 /* Left Section (Form) */
@@ -957,10 +956,6 @@ form {
         text-align: center;
     }
 }
-
-
-
-=======
 .roboto-Roboto {
   font-family: "Roboto", serif;
   font-optical-sizing: auto;
@@ -969,7 +964,6 @@ form {
   font-variation-settings:
     "wdth" 100;
 }
->>>>>>> cffaee0b4ebc2f9dcf46928da97ddc2ccee0498b
   </style>
   {% block css %}{% endblock %}
 </head>
