changes as per requirements on navbar

--- a/Eapp/templates/navbarr.html
+++ b/Eapp/templates/navbarr.html
@@ -245,38 +245,158 @@
             <div class="menu">
                 <a href="#" onmouseover="showSubMenu('robotics', 'submenu-domains')">Robotics</a>
                 <a href="#" onmouseover="showSubMenu('agriculture', 'submenu-domains')">Agriculture</a>
-                <a href="#" onmouseover="showSubMenu('electronics', 'submenu-domains')">Electronics</a>
+                <a href="#" onmouseover="showSubMenu('Electronics', 'submenu-domains')">Electronics</a>
+                <a href="#" onmouseover="showSubMenu('IoT', 'submenu-domains')"> IoT</a>
+                <a href="#" onmouseover="showSubMenu('Healthcare', 'submenu-domains')">Healthcare</a>
+                <a href="#" onmouseover="showSubMenu('DefenceSector', 'submenu-domains')">Defence Sector</a>
             </div>
             <div class="sub-menu" id="submenu-domains">
                 <!-- ✅ Robotics -->
                 <div class="submenu-item robotics">
-                    <img src="{% static 'images/BionicHand.jpg' %}" alt="Autonomous Robotics">
+                    <img src="{% static 'images/autonomous.jpg' %}" alt="Autonomous Robotics">
                     <a href="#">Autonomous Robotics</a>
                 </div>
                 <div class="submenu-item robotics">
-                    <img src="{% static 'images/BionicHand.jpg' %}" alt="Industrial Robotics">
+                    <img src="{% static 'images/industrial.webp' %}" alt="Industrial Robotics">
                     <a href="#">Industrial Robotics</a>
                 </div>
-    
+
+                <div class="submenu-item robotics">
+                    <img src="{% static 'images/medical.jpg' %}" alt="Medical Robotics">
+                    <a href="#">Medical Robotics</a>
+                </div>
+
+                <div class="submenu-item robotics">
+                    <img src="{% static 'images/biomechanical.jpg' %}" alt="Biomechanical Robotics">
+                    <a href="#">Biomechanical Robotics</a>
+                </div>
+                
+                <div class="submenu-item robotics">
+                    <img src="{% static 'images/teleoperated.webp' %}" alt="Teleoperated Robotics">
+                    <a href="#">Teleoperated Robotics</a>
+                </div>
+
                 <!-- ✅ Agriculture -->
                 <div class="submenu-item agriculture">
                     <img src="{% static 'images/BionicHand.jpg' %}" alt="Agriculture Drone">
-                    <a href="#">Agriculture Drone</a>
+                    <a href="#">Agri-Tech Automation</a>
                 </div>
                 <div class="submenu-item agriculture">
                     <img src="{% static 'images/BionicHand.jpg' %}" alt="Smart Farming">
-                    <a href="#">Smart Farming</a>
+                    <a href="#">Smart Greenhouses</a>
                 </div>
-    
+                <div class="submenu-item agriculture">
+                    <img src="{% static 'images/BionicHand.jpg' %}" alt="Smart Farming">
+                    <a href="#">Agro-Sensing</a>
+                </div>
+                <div class="submenu-item agriculture">
+                    <img src="{% static 'images/BionicHand.jpg' %}" alt="Smart Farming">
+                    <a href="#">Livestock Technology</a>
+                </div>
+                <div class="submenu-item agriculture">
+                    <img src="{% static 'images/BionicHand.jpg' %}" alt="Smart Farming">
+                    <a href="#">Post-Harvest Automation</a>
+                </div>
+
                 <!-- ✅ Electronics -->
-                <div class="submenu-item electronics">
-                    <img src="{% static 'images/BionicHand.jpg' %}" alt="Microcontrollers">
-                    <a href="#">Microcontrollers</a>
+                <div class="submenu-item Electronics">
+                    <img src="{% static 'images/BionicHand.jpg' %}" alt="Digital Electronics">
+                    <a href="#">Digital Electronics</a>
                 </div>
-                <div class="submenu-item electronics">
+                <div class="submenu-item Electronics">
                     <img src="{% static 'images/BionicHand.jpg' %}" alt="PCB Design">
-                    <a href="#">PCB Design</a>
+                    <a href="#">Embedded Systems</a>
                 </div>
+                <div class="submenu-item Electronics">
+                    <img src="{% static 'images/BionicHand.jpg' %}" alt="PCB Design">
+                    <a href="#">Consumer Electronics</a>
+                </div>
+                <div class="submenu-item Electronics">
+                    <img src="{% static 'images/BionicHand.jpg' %}" alt="PCB Design">
+                    <a href="#">Automotive Electronics</a>
+                </div>
+                <div class="submenu-item Electronics">
+                    <img src="{% static 'images/BionicHand.jpg' %}" alt="PCB Design">
+                    <a href="#">Power & Energy Electronics</a>
+                </div>
+
+                <!-- ✅ IOT -->
+                <div class="submenu-item IoT">
+                    <img src="{% static 'images/autonomous.jpg' %}" alt="Autonomous Robotics">
+                    <a href="#">Autonomous Robotics</a>
+                </div>
+                <div class="submenu-item IoT">
+                    <img src="{% static 'images/industrial.webp' %}" alt="Industrial Robotics">
+                    <a href="#">Industrial Robotics</a>
+                </div>
+
+                <div class="submenu-item IoT">
+                    <img src="{% static 'images/medical.jpg' %}" alt="Medical Robotics">
+                    <a href="#">Medical Robotics</a>
+                </div>
+
+                <div class="submenu-item IoT">
+                    <img src="{% static 'images/biomechanical.jpg' %}" alt="Biomechanical Robotics">
+                    <a href="#">Biomechanical Robotics</a>
+                </div>
+                
+                <div class="submenu-item IoT">
+                    <img src="{% static 'images/teleoperated.webp' %}" alt="Teleoperated Robotics">
+                    <a href="#">Teleoperated Robotics</a>
+                </div>
+
+                <!-- ✅ Healthcare -->
+                <div class="submenu-item Healthcare">
+                    <img src="{% static 'images/autonomous.jpg' %}" alt="AutonomousRobotics">
+                    <a href="#">Autonomous Robotics</a>
+                </div>
+                <div class="submenu-item Healthcare">
+                    <img src="{% static 'images/industrial.webp' %}" alt="IndustrialRobotics">
+                    <a href="#">Industrial Robotics</a>
+                </div>
+
+                <div class="submenu-item Healthcare">
+                    <img src="{% static 'images/medical.jpg' %}" alt="MedicalRobotics">
+                    <a href="#">Medical Robotics</a>
+                </div>
+
+                <div class="submenu-item Healthcare">
+                    <img src="{% static 'images/biomechanical.jpg' %}" alt="BiomechanicalRobotics">
+                    <a href="#">Biomechanical Robotics</a>
+                </div>
+                
+                <div class="submenu-item Healthcare">
+                    <img src="{% static 'images/teleoperated.webp' %}" alt="TeleoperatedRobotics">
+                    <a href="#">Teleoperated Robotics</a>
+                </div>
+
+
+                <!-- ✅ Defence Sector -->
+                <div class="submenu-item DefenceSector">
+                    <img src="{% static 'images/autonomous.jpg' %}" alt="AutonomousRobotics">
+                    <a href="#">Autonomous Robotics</a>
+                </div>
+                <div class="submenu-item DefenceSector">
+                    <img src="{% static 'images/industrial.webp' %}" alt="IndustrialRobotics">
+                    <a href="#">Industrial Robotics</a>
+                </div>
+
+                <div class="submenu-item DefenceSector">
+                    <img src="{% static 'images/medical.jpg' %}" alt="MedicalRobotics">
+                    <a href="#">Medical Robotics</a>
+                </div>
+
+                <div class="submenu-item DefenceSector">
+                    <img src="{% static 'images/biomechanical.jpg' %}" alt="BiomechanicalRobotics">
+                    <a href="#">Biomechanical Robotics</a>
+                </div>
+                
+                <div class="submenu-item DefenceSector">
+                    <img src="{% static 'images/teleoperated.webp' %}" alt="TeleoperatedRobotics">
+                    <a href="#">Teleoperated Robotics</a>
+                </div>
+
+
             </div>
         </div>
     </div>
@@ -310,11 +430,8 @@
             </div>
         </div>
     </div>
-    
-    
-    </div>
 
-    
+    </div>
   </header>
 </body>
 
