--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -774,8 +774,6 @@ footer {
   background-color: #222;
 }
 
-<<<<<<< HEAD
-
 /*register page*/
 
 /* ✅ Centering container */
@@ -788,13 +786,18 @@ footer {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 30px;
     gap: 20px;
+    margin-top: 25px;
     margin-left: 110px;
+    margin-bottom: 25px;
 }
 
 /* Left Section (Form) */
 .register-box {
-    flex: 1.5;
+
+    flex:2;
+    margin-bottom:20px;
     padding: 20px;
+    font-size: 25px;
 }
 
 .register-box h2 {
@@ -947,16 +950,6 @@ form {
 
 
 
-=======
-.roboto-Roboto {
-  font-family: "Roboto", serif;
-  font-optical-sizing: auto;
-  font-weight: 100;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
->>>>>>> cffaee0b4ebc2f9dcf46928da97ddc2ccee0498b
   </style>
   {% block css %}{% endblock %}
 </head>
