add register page and changes in database

--- a/Eapp/templates/register.html
+++ b/Eapp/templates/register.html
@@ -23,12 +23,12 @@
 
                     <div class="input-group">
                         <label>UserName</label>
-                        <input type="text" name="business_name" required>
+                        <input type="text" name="username" required>
                     </div>
 
                     <div class="input-group">
                         <label>Gender</label>
-                        <select name="country" required>
+                        <select name="gender" required>
                             <option value="">Select</option>
                             <option value="Male">Male</option>
                             <option value="Female">Female</option>
