--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -135,7 +135,7 @@
   top: 100%;
   left: 0;
   background-color: #ffffff;
-  min-width: 400px;
+  min-width: 200px;
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   z-index: 1000; /* Increase this value */
 }
@@ -1182,15 +1182,12 @@ form {
           <div class="product">
             <a href="#">Electronics <strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#" style="background-color: black; color: white;">DC Motors</a>
               <a href="#">5V DC Motor</a>
               <a href="#">12V DC Motor</a>
               <a href="#">High Torque DC Motor</a>
-              <a href="#" style="background-color: black; color: white;">Servo Motors</a>
               <a href="#">SG90 (9g Servo Motor)</a>
               <a href="#">MG996R (High Torque Servo)</a>
               <a href="#">MG90S (Micro Servo)</a>
-              <a href="#" style="background-color: black; color: white;">Stepper Motors</a>
               <a href="#">NEMA 17 Stepper Motor</a>
               <a href="#">28BYJ-48 Stepper Motor (with Driver)</a>
             </div>
@@ -1200,12 +1197,18 @@ form {
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
+              <a href="#">Details 2</a>
+              <a href="#">Details 2</a>
+              <a href="#">Details 2</a>
             </div>
           </div>
           <div class="product">
             <a href="#">Healthcare<strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
+              <a href="#">Details 2</a>
+              <a href="#">Details 2</a>
+              <a href="#">Details 2</a>
               <a href="#">Details 2</a>
             </div>
           </div>
@@ -1215,6 +1218,7 @@ form {
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
               <a href="#">Details 2</a>
+              <a href="#">Details 2</a>
             </div>
           </div>
           <div class="product">
@@ -1222,6 +1226,7 @@ form {
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
+              <a href="#">Details 3</a>
               <a href="#">Details 3</a>
             </div>
           </div>
@@ -1241,12 +1246,6 @@ form {
             <a href="#">C++ <strong>></strong></a>
           </div>
           <div class="project">
-            <a href="#">Arduino (C/C++)<strong>></strong></a>
-          </div>
-          <div class="project">
-            <a href="#">Aster Robot <strong>></strong></a>
-          </div>
-          <div class="project">
             <a href="#">Python <strong>></strong></a>
           </div>
         </div>
@@ -1255,9 +1254,9 @@ form {
 
       <!-- Products Dropdown -->
       <div class="dropdown">
-        <a href="#">Microcontrollers <i class="fa-solid fa-chevron-down"></i></a>
+        <a href="#">Platform Hubs <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content">
-          <a href="#" style="background-color: black; color: white;">microcontrollers</a>
+          <a href="#" style="background-color: black; color: white;">Platform Hubs</a>
           <div class="product">
             <a href="#">Arduino <strong>></strong></a>
             <div class="nested-dropdown">
