update in navbar of base.html

--- a/Eapp/templates/navbarr.html
+++ b/Eapp/templates/navbarr.html
@@ -316,8 +316,8 @@
                     <a href="#">Automotive Electronics</a>
                 </div>
                 <div class="submenu-item Electronics">
-                    <img src="{% static 'images/BionicHand.jpg' %}" alt="Power & Energy Electronics">
-                    <a href="#">Power & Energy Electronics</a>
+                    <img src="{% static 'images/BionicHand.jpg' %}" alt="Energy Electronics">
+                    <a href="#">Energy Electronics</a>
                 </div>
 
                 <!-- ✅ IOT -->
@@ -331,18 +331,18 @@
                 </div>
 
                 <div class="submenu-item IoT">
-                    <img src="{% static 'images/medical.jpg' %}" alt="Wearable & Personal IoT">
-                    <a href="#">Wearable & Personal IoT</a>
+                    <img src="{% static 'images/medical.jpg' %}" alt="Personal IoT">
+                    <a href="#">Personal IoT</a>
                 </div>
 
                 <div class="submenu-item IoT">
-                    <img src="{% static 'images/biomechanical.jpg' %}" alt="Edge Computing & AIoT">
-                    <a href="#">Edge Computing & AIoT</a>
+                    <img src="{% static 'images/biomechanical.jpg' %}" alt="Edge Computing">
+                    <a href="#">Edge Computing</a>
                 </div>
                 
                 <div class="submenu-item IoT">
-                    <img src="{% static 'images/teleoperated.webp' %}" alt="IoT Security & Data Management">
-                    <a href="#">IoT Security & Data Management</a>
+                    <img src="{% static 'images/teleoperated.webp' %}" alt="IoT Security">
+                    <a href="#">IoT Security</a>
                 </div>
 
                 <!-- ✅ Healthcare -->
