--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -941,10 +941,6 @@ h2 {
       font-size: 13px;
   }
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> c821d1f95fcc307e0a20726308272cef2d65fdc1
 
 
 /*register page*/
@@ -1147,10 +1143,6 @@ form {
 
 
 
-<<<<<<< HEAD
-
-=======
->>>>>>> c821d1f95fcc307e0a20726308272cef2d65fdc1
 .roboto-Roboto {
   font-family: "Roboto", serif;
   font-optical-sizing: auto;
@@ -1209,52 +1201,51 @@ form {
           <div class="product">
             <a href="#">Agriculture<strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#">L298N Motor Driver Module</a>
-              <a href="#">L293D Motor Driver</a>
-              <a href="#">TB6612FNG Motor Driver</a>
-              <a href="#">DRV8833 Motor Driver</a>
+              <a href="#">Agri-Tech Automation</a>
+              <a href="#">Smart Greenhouse</a>
+              <a href="#">Agro-Sensing & Monitoring </a>
+              <a href="#">Livestock Technology</a>
+              <a href="#">Post-Harvest Automation</a>
             </div>
           </div>
           <div class="product">
             <a href="#">Electronics <strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#">5V DC Motor</a>
-              <a href="#">12V DC Motor</a>
-              <a href="#">High Torque DC Motor</a>
-              <a href="#">SG90 (9g Servo Motor)</a>
-              <a href="#">MG996R (High Torque Servo)</a>
-              <a href="#">MG90S (Micro Servo)</a>
-              <a href="#">NEMA 17 Stepper Motor</a>
-              <a href="#">28BYJ-48 Stepper Motor (with Driver)</a>
+              <a href="#">Analog & Digital Electronic</a>
+              <a href="#">Embedded System</a>
+              <a href="#">Consumer Electronic</a>
+              <a href="#">Automotive Electronic</a>
+              <a href="#"> Energy Electronics</a>
+             
             </div>
           </div>
           <div class="product">
             <a href="#">IoT (Internet of Things) <strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 2</a>
+              <a href="#">Industrial IoT</a>
+              <a href="#">Smart Infrastructure</a>
+              <a href="#"> Personal IoT</a>
+              <a href="#">Edge Computing</a>
+              <a href="#">IoT Security</a>
             </div>
           </div>
           <div class="product">
             <a href="#">Healthcare<strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 2</a>
+              <a href="#">Medical Robotics</a>
+              <a href="#">Wearable Health Tech</a>
+              <a href="#">Telemedicine</a>
+              <a href="#">Neurotechnology</a>
+              <a href="#">Healthcare IoT</a>
             </div>
           </div>
           <div class="product">
             <a href="#">Defence Sector<strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 2</a>
+              <a href="#">Autonomous systems</a>
+              <a href="#">Cyber Warfare </a>
+              <a href="#">Tactical Communication Systems </a>
+              <a href="#">Underwater Technologies</a>
             </div>
           </div>
           <div class="product">
