--- a/Eapp/templates/register.html
+++ b/Eapp/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<div class="register-container">
+<div class="container">
     <!-- Left Section: Registration Form -->
     <div class="register-box">
         <h1 style="text-align: center;"><b>Register</b></h1>
