--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -14,7 +14,7 @@
           <li><a href="/otto">Otto Robot</a></li>
           <li><a href="/home-automation">Home Automation</a></li>
           <li><a href="#">Dog Head</a></li>
-          <li><a href="#">Humonoid Robot</a></li>
+          <li><a href="humanoid_robot">Humonoid Robot</a></li>
           <li><a href="/obstraction-avoiding-car">Obstacle Avoidance Car</a></li>
           <li><a href="#">Real Time Clock</a></li>
         </ul>
