--- a/Eapp/templates/bionic_hand.html
+++ b/Eapp/templates/bionic_hand.html
@@ -348,6 +348,7 @@
      
     .dark-mode .content-box {
         background-color: #333;
+        color: white;
         box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
     }
      
@@ -459,7 +460,7 @@
         <h1 style="font-weight: bold; font-size: 32px; margin: 0;color: white">Bionic Hand</h1>
     </header>
    
-    <body class="bg-white">
+    <body>
         <div class="circuit-bg">
     <div class="container">
        
@@ -529,7 +530,7 @@
  
     <section class="content-box">
         <h2 class="section-title">Comprehensive Guide</h2>
-        <p style="color: black;">
+        <p>
             This guide covers the step-by-step process to build, assemble, and program Bionic Hand.
             It includes schematics, 3D printing details, and coding instructions to bring your Bionic Hand to life.
         </p>
@@ -563,7 +564,7 @@
         <!-- 3D Model Viewer Section -->
 <section class="content-box">
     <h2 class="section-title">3D Model Viewer</h2>
-    <p style="color: black;">Explore the 3D printable components of Otto Robot.</p>
+    <p>Explore the 3D printable components of Otto Robot.</p>
     <div class="model-buttons">
         <a href="https://drive.google.com/file/d/1bVrAiP7W5oJ2_WA8KgbkxzhxjEunxegG/view?usp=drive_link" target="_blank">
             <button class="view-button">Click here to view Head</button>
