--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -804,7 +804,7 @@ footer {
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    margin-top: 100px;  /* Yeh already tha */
+    margin-top: 55px;  /* Yeh already tha */
     margin-bottom: 150px;  /* Yeh badhaya */
 }
 
@@ -887,6 +887,9 @@ footer {
     gap: 10px;
     margin-top: 10px;
 }
+.dark-mode .login-container{
+  color:#000;
+}
 
 .social-btn {
     display: flex;
@@ -910,7 +913,9 @@ footer {
     width: 20px;
     height: 20px;
 }
-
+.dark-mode .social-btn{
+  color:#000;
+}
 /* Register Link */
 .login-container p {
     font-size: 14px;
